--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methed cinema - онлайн-кинотеатр</title>
 
-    <link rel="icon" href="../img/me.svg">
+    <link rel="icon" href="img/me.svg">
 
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 
-    <script src="index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
 </head>
 
 <body>
@@ -142,12 +142,12 @@
             </div>
 
             <div class="footer__column regulation">
-                <img class="regulation__age" src="../img/18+.svg" alt="Только для совершеннолетних">
+                <img class="regulation__age" src="img/18+.svg" alt="Только для совершеннолетних">
                 <p class="regulation__offer">Просматривая материалы, находящиеся на настоящем сайте, вы&nbsp;обязуетесь выполнять условия Публичной оферты</p>
             </div>
 
             <div class="footer__column partners">
-                <img class="partners__me" src="../img/me.svg" alt="Логотип MethEd">
+                <img class="partners__me" src="img/me.svg" alt="Логотип MethEd">
                 <p class="partners__description">Исследования осуществляются ООО «МЕТЭД ДЕВЕЛОПМЕНТ» при&nbsp; поддержке Фонда «SPB Tech»</p>
             </div>
         </div>
